# wintercircus

./: .gitignore  Excercises.sln  README.md  demo.txt  readme.md
.devcontainer/: Dockerfile  devcontainer.json
ACI_MCP/: .env.template  api_key_auth.py  deploy.ps1  main.py
Code_and_deployments/ACI_MCP/: main.py
Code_and_deployments/SK-Agent/: .env.template
Code_and_deployments/SK-Foundry/: .gitignore  SK-Foundry.csproj  program.cs
Module0 [Pre-reqs]/: install-vscode-and-extensions.sh  readme.md
Module1 [Prep and NIM]/: readme.md
Module2 [Semantic Kernel]/: .env.example  pyproject.toml  readme.md
Module2 [Semantic Kernel]/01-intro-to-semantic-kernel/: 01-intro.ipynb
Module2 [Semantic Kernel]/02-semantic-kernel-agents/: .env.example  02.1-single-agent-nim.ipynb  02.3-agents-chats-new-method.ipynb  02.3-agents-chats-new-method.py  requirements.txt
Module2 [Semantic Kernel]/03-semantic-kernel-mcp/: .env.example  3.1-sk-with-mcp.ipynb
Module2 [Semantic Kernel]/04-process-framework/: .env.example  04.1-intro-to-processes.ipynb
Module3 [Extra exercises]/: readme.md
Module3 [Extra exercises]/MCP on Azure Container Instances/: README.md
Module3 [Extra exercises]/MCP through APIM/: 01-APIM-MCPenabled-Deployment-Guide.MD  02-APIM-MCP-Creation-Guide.md  03-APIC-MCP-Guide.md
Module3 [Extra exercises]/MCP trhough APIM/: 01-APIM-MCPenabled-Deployment-Guide.MD  README.MD
SK-Agent/: .env  README.md  main.py  requirements.txt
weather-react-app/: .env  .env.template  README.md  package-lock.json  package.json
weather-react-app/src/: authConfig.js
(+16 files in other folders)
